# mcp-docs-tidb

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/commands/: sync-ja-readme.md
docs/: README.ja.md
src/mcp_docs_tidb/: ingest.py  main.py  mcp_server.py  server.py  settings.py  tidb.py
src/mcp_docs_tidb/common/: filters.py  func_tools.py  wrap_filters.py
src/mcp_docs_tidb/embeddings/: base.py  factory.py  fastembed.py
tests/: conftest.py  test_embeddings_base.py  test_embeddings_factory.py  test_embeddings_fastembed.py  test_filters.py  test_format_db_error.py  test_func_tools.py  test_ingest.py  test_ingest_cli.py  test_main.py  test_mcp_server.py  test_mcp_server_async_tools.py  test_settings.py  test_settings_extras.py  test_tidb_integration.py  test_tidb_unit.py  test_validate_identifier.py  test_wrap_filters.py
