[project]
name = "mcp-docs-tidb"
version = "0.1.0"
description = "MCP server for retrieving context from a TiDB vector database"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "fastembed>=0.6.0",
    "pytidb>=0.0.13",
    "pydantic>=2.10.6,<2.12.0",
    "pydantic-settings>=2.4.0",
    "fastmcp==2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_docs_tidb"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "isort>=6.0.1",
    "mypy>=1.9.0",
    "pre-commit>=4.1.0",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[project.scripts]
mcp-docs-tidb = "mcp_docs_tidb.main:main"
mcp-docs-tidb-ingest = "mcp_docs_tidb.ingest:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
